<resources>
    <string name="app_name">Smart Plans</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Client ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to plan dashboard -->
    <string name="plan_dashboard">Plan Dashboard</string>
    <string name="card_summary_title">Overview</string>
    <string name="card_summary_balance">Current balance</string>
    <string name="card_summary_monthlySavedFromTransactions_title">Saved amount:</string>
    <string name="card_summary_monthlyPlans_title">Plans:</string>
    <string name="card_summary_emergencyFunds_title">Emergency funds:</string>
    <string name="card_summary_freeFunds_title">Fund money:</string>
    <string name="dashboard_no_plans_created">No plans created</string>

    <!-- String related to new plan -->
    <string name="new_plan">New plan</string>
    <string name="new_plan_create_btn_title">Create</string>
    <string name="new_plan_expiration_date_label">Plan expiration date:</string>
    <string name="new_plan_amount_label">Plan amount:</string>
    <string name="new_plan_name_label">Plan name:</string>

    <!-- String related to new plan -->
    <string name="transactions">Transaction optimizing</string>
    <string name="transaction_optimizing_prefix">You can save</string>
    <string name="transaction_optimizing_suffix">on these transactions</string>

</resources>