<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:theme="@style/Theme.ProfinitMoneyLearning.App"
    tools:context=".ui.plandashboard.PlanDashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_plan"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/Theme.ProfinitMoneyLearning.TitleOnBackground" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/white"
            android:background="@null"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sc_background"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/planName"
            android:layout_width="150dp"
            android:layout_height="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:gravity="center|start"
            android:textSize="16sp"
            android:text="@string/new_plan_name_label"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/planNameValue"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:inputType="text"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/planName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/planName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/planAmount"
            android:layout_width="150dp"
            android:layout_height="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planNameValue"

            android:gravity="center|start"
            android:textSize="16sp"
            android:text="@string/new_plan_amount_label"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/planAmountValue"
            android:layout_width="0dp"
            android:layout_height="44dp"

            android:inputType="number"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/planAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/planAmount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/planExpiration"
            android:layout_width="150dp"
            android:layout_height="44dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planAmount"

            android:gravity="center|start"
            android:textSize="16sp"
            android:text="@string/new_plan_expiration_date_label"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/planExpirationValue"
            android:layout_width="0dp"
            android:layout_height="44dp"

            android:inputType="date"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/planExpiration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/planExpiration"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="@id/planAmount"
            app:layout_constraintEnd_toEndOf="@id/planAmountValue"
            android:background="@color/profinit_red"
            android:text="@string/new_plan_create_btn_title"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>