<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="wrap_content"
    android:layout_width="match_parent"

    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"

    tools:context=".ui.plandashboard.PlanDashboardActivity"
    tools:theme="@style/Theme.ProfinitMoneyLearning.App">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/card_summary_title"

            android:layout_marginTop="8dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/card_summary_balance"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentBalanceValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/currentBalance"
            app:layout_constraintTop_toTopOf="@id/currentBalance"
            app:layout_constraintEnd_toEndOf="parent"

            tools:text="0Kč"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/balanceSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/currentBalance"

            app:labelStyle="@style/MyTooltip"
            app:materialThemeOverlay="@style/ThemeOverlay.Slider"
            android:stepSize="5000"
            android:value="100000"
            android:valueFrom="0"
            android:valueTo="1000000"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/monthlyPlusSaveFromTransactions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/card_summary_monthlySavedFromTransactions_title"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/balanceSlider"
            app:layout_constraintStart_toStartOf="parent"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/monthlyPlusSaveFromTransactionsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/monthlyPlusSaveFromTransactions"
            app:layout_constraintTop_toTopOf="@id/monthlyPlusSaveFromTransactions"
            app:layout_constraintEnd_toEndOf="parent"

            tools:text="0Kč"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/monthlyMinusPlans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/card_summary_monthlyPlans_title"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/monthlyPlusSaveFromTransactions"
            app:layout_constraintStart_toStartOf="parent"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/monthlyMinusPlansValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/monthlyMinusPlans"
            app:layout_constraintTop_toTopOf="@id/monthlyMinusPlans"
            app:layout_constraintEnd_toEndOf="parent"

            tools:text="0Kč"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emergencyFunds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/card_summary_emergencyFunds_title"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/monthlyMinusPlans"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emergencyFundsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/emergencyFunds"
            app:layout_constraintTop_toTopOf="@id/emergencyFunds"
            app:layout_constraintEnd_toEndOf="parent"

            tools:text="0Kč"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/freeFunds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/card_summary_freeFunds_title"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/emergencyFunds"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/freeFundsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/freeFunds"
            app:layout_constraintTop_toTopOf="@id/freeFunds"
            app:layout_constraintEnd_toEndOf="parent"

            tools:text="0Kč"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>