<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:theme="@style/Theme.ProfinitMoneyLearning.App"
    tools:context=".ui.plandashboard.PlanDashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/transactions"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/Theme.ProfinitMoneyLearning.TitleOnBackground" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/white"
            android:background="@null"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sc_background">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardSummary"

                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                tools:context=".ui.plandashboard.PlanDashboardActivity"
                tools:theme="@style/Theme.ProfinitMoneyLearning.App"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sc_background"
                    android:padding="8dp"
                    app:layout_constraintHorizontal_chainStyle="packed">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/allSavedPrefix"
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/transaction_optimizing_prefix"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintEnd_toStartOf="@id/allSavedValue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/allSavedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@android:color/holo_green_light"
                        android:textStyle="bold"
                        android:layout_marginStart="4dp"
                        app:layout_constraintEnd_toStartOf="@id/allSavedSuffix"
                        app:layout_constraintStart_toEndOf="@id/allSavedPrefix"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="100CZK" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/allSavedSuffix"
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/transaction_optimizing_suffix"
                        android:textSize="16sp"
                        android:layout_marginStart="4dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/allSavedValue"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:background="@color/disabled"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoriesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"

                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/cardSummary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>